--- a/introduction.ipynb
+++ b/introduction.ipynb
@@ -4,14 +4,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## <font color='blue'>Environment Setup</font>\n",
+    "## Environment Setup\n",
     "\n",
     "+ We will be working with Python 3\n",
     "    + We suggest using Jupyter Lab as we will use Python interactively\n",
     "    + [Install Jupyter Notebook](https://jupyter.readthedocs.io/en/latest/install.html) or [Jupyter Lab](https://jupyterlab.readthedocs.io/en/stable/getting_started/installation.html) if you don't have anaconda already installed\n",
     "+ Download the Github repository for this tutorial here [https://github.com/ftarlaci/pydata-austin-tutorial.git] \n",
-    "    + Browse through the repository and locate the files in the folder\n",
-    "+  Exercise solutions will be uploaded by the end of the tutorial. You will need to pull from github to see them. "
+    "    + Browse through the repository and locate the files in the folder"
    ]
   },
   {
