--- a/introduction.ipynb
+++ b/introduction.ipynb
@@ -17,7 +17,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### <font color='blue'>Importing Libraries</font>\n",
+    "### Importing Libraries\n",
     "\n",
     "+ Importing the packages we will use today\n"
    ]
