--- a/introduction.ipynb
+++ b/introduction.ipynb
@@ -72,7 +72,7 @@
    "source": [
     "# <center>Sentiment Analysis</center>\n",
     "\n",
-    "### <font color='blue'>What Is It?</font>\n",
+    "### What Is It?\n",
     "\n",
     "+ Sentiment analysis (SA) is **the process of understanding an opinion (sentiment) about a given subject from written or spoken language.** \n",
     "+ It is one of the subfields of Natural Language Processing (NLP) that extracts opinion and attributes from text (or speech). \n",
@@ -101,7 +101,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### <font color='blue'>How Does It Bring Insight to Textual Data?</font>\n",
+    "### How Does It Bring Insight to Textual Data?\n",
     "+ It has many practical applications: **product reviews, marketing analysis, customer feedback.**\n",
     "+ It allows us to **make sense of data** in ways that enhance the techniques we use in data science and machine learning for this purpose.\n",
     "+ It is an example of **a classification problem** where a classifier tells if the sentiment in a piece of **text is positive, negative, (or neutral)** or any other class that is defined for classification. \n",
@@ -121,7 +121,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### <font color='blue'>Why Is It Valuable?</font>\n",
+    "### Why Is It Valuable?\n",
     "\n",
     "Organizations deal with enormous amount of data; customer calls, emails, social media posts, among many other variants. **Making these types of data more meaningful and useful requires a lot of effort and time.** One of the core skills in extracting information from and gaining insight into textual data is NLP. **NLP is one of the must have skills for all data scientists** given the constant increase in textual data everywhere we look. \n",
     "\n",
@@ -135,7 +135,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### <font color='blue'>Basic Terminology</font>\n",
+    "### Basic Terminology\n",
     "\n",
     "+ **Stop Words** -- Removal of words that are not important from the information point of view, such as 'the', 'is' 'a' etc.\n",
     "+ **Tokenization**  -- Segmentation of text into words (a form of feature extraction)\n",
@@ -155,7 +155,7 @@
    "metadata": {},
    "source": [
     "\n",
-    "### <font color='blue'>Open Source NLP Libraries</font>\n",
+    "### Open Source NLP Libraries\n",
     "\n",
     "+ Many open source libraries are at your service when you want to implement NLP models\n",
     "\n",
@@ -169,7 +169,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### <font color='blue'>Text Representation</font>\n",
+    "### Text Representation\n",
     "\n",
     "+ Classifiers and learning algorithms cannot directly process the text documents in their original form, as most of them expect numerical feature vectors with a fixed size rather than the raw text documents with variable length\n",
     "+ During the text preprocessing step, the text is converted to a computationally more manageable representation\n",
@@ -203,7 +203,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### <font color='blue'>What Will We Do Today?</font>\n",
+    "### What Will We Do Today?\n",
     "\n",
     "+ Gain a practical understanding of sentiment analysis and its influence on business processes\n",
     "+ Build a sentiment analysis classifier in Python, using some of the open-source NLP and machine learning libraries\n",
@@ -215,7 +215,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### <font color='blue'>Workflow:</font>\n",
+    "### Workflow:\n",
     "+ Import libraries and inspect the dataset \n",
     "+ Pre-processing data: clean the data using nltk methods\n",
     "+ Create a sentiment classification model\n",
