--- a/exercises/exercise1.ipynb
+++ b/exercises/exercise1.ipynb
@@ -66,8 +66,9 @@
     "\n",
     "    Now, you have preprocessed the data!\n",
     "'''\n",
-    "\n",
-    "# Your code here"
+    "for i in range(0,26):\n",
+    "    data = re.sub('[^a-zA-Z]', ' ', dataset['verified_reviews'][i] )\n",
+    "    # Your code here"
    ]
   },
   {
