--- a/introduction.ipynb
+++ b/introduction.ipynb
@@ -9,7 +9,7 @@
     "+ We will be working with Python 3\n",
     "    + We suggest using Jupyter Lab as we will use Python interactively\n",
     "    + [Install Jupyter Notebook](https://jupyter.readthedocs.io/en/latest/install.html) or [Jupyter Lab](https://jupyterlab.readthedocs.io/en/stable/getting_started/installation.html) if you don't have anaconda already installed\n",
-    "+ Download the Github repository for this tutorial here [https://github.com/ftarlaci/pydata-austin-tutorial.git] \n",
+    "+ Download or clone the Github repository for this tutorial here [https://github.com/ftarlaci/pydata-austin-tutorial.git] \n",
     "    + Browse through the repository and locate the files in the folder"
    ]
   },
