--- a/preprocessing_text_with_nltk.ipynb
+++ b/preprocessing_text_with_nltk.ipynb
@@ -24,57 +24,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Work with the provided toy dataset below and load it into a dataframe using Pandas.DataFrame()"
+    "#### Work with the provided sentence below and load it into a dataframe using Pandas.DataFrame()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>0</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>I am enjoying my time at PyData Austin. Austin...</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "                                                   0\n",
-       "0  I am enjoying my time at PyData Austin. Austin..."
-      ]
-     },
-     "execution_count": 19,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "#Pre-process the sentences below that could be interpreted as positive, negative\n",
     "dataset = ['I am enjoying my time at PyData Austin. Austin is a beautiful city but I don\\'t like the traffic!']   \n",
